--- a/movie_reviewer_api/requirements.txt
+++ b/movie_reviewer_api/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 black==24.4.2
 click==8.1.7
 Django==5.0.6
+django-cors-headers==4.4.0
 djangorestframework==3.15.2
 factory-boy==3.3.0
 Faker==26.0.0
